# wasm3-arduino

./: README.md  keywords.txt  library.json  library.properties  verification.txt
examples/Blink/: Blink.ino
examples/Wasm_Blink/: Wasm_Blink.ino
examples/Wasm_CoreMark/: README.md  Wasm_CoreMark.ino
examples/Wasm_Dino_ESP32_TDisplay/: Wasm_Dino_ESP32_TDisplay.ino  dino.wasm  dino.wasm.h  dino.wat
examples/Wasm_Dino_PyBadge/: Wasm_Dino_PyBadge.ino  dino.wasm.h
examples/Wasm_Fibonacci/: Wasm_Fibonacci.ino
examples/Wasm_PyBadge_Dino/: Wasm_PyBadge_Dino.ino  dino.wasm  dino.wasm.h  dino.wat
examples_pio/Wasm_Advanced/: README.md  platformio.ini
examples_pio/Wasm_Advanced/wasm_apps/assemblyscript/: .gitignore  app.ts  app.wasm  app.wasm.h  arduino.ts  package-lock.json  package.json
examples_pio/Wasm_Advanced/wasm_apps/cpp/: app.cpp  (+5 more)
examples_pio/Wasm_Advanced/wasm_apps/rust/: .gitignore  Cargo.toml  app.rs  app.wasm  app.wasm.h  arduino.rs  build.sh
examples_pio/Wasm_Advanced/wasm_apps/rust/src/: app.rs  arduino.rs
examples_pio/Wasm_Advanced/wasm_vm/: wasm_vm.ino
src/: m3_api_libc.c  m3_compile.c  m3_config_platforms.h  m3_env.c  m3_env.h  m3_exec.c  wasm3.h
wasm_apps/: README.md
wasm_apps/assemblyscript/: .gitignore  app.ts  app.wasm  app.wasm.h  app.wat  arduino.ts  build.sh  package-lock.json  package.json
wasm_apps/cpp/: build.sh
wasm_apps/rust/: app.rs  app.wasm  app.wasm.h  arduino.rs  arduino_api.rs
wasm_apps/rust/.cargo/: config
wasm_apps/rust/src/: app.rs  arduino.rs
wasm_apps/tinygo/: app.go  app.wasm  app.wasm.h  build.sh
(+4 files in other folders)
